--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "zeppelin-solidity": "^1.6.0"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "drizzle": "^1.0.1",
+    "ethereumjs-util": "^5.2.0",
     "material-ui": "^1.0.0-beta.38",
     "material-ui-icons": "^1.0.0-beta.36",
     "mdi-material-ui": "^3.2.0",
@@ -68,6 +70,7 @@
     "redux-auth-wrapper": "^1.0.0",
     "redux-saga": "^0.15.6",
     "redux-thunk": "^2.2.0",
+    "scryptsy": "^2.0.0",
     "simple-icons": "^1.3.8",
     "typeface-roboto": "0.0.54"
   },
