--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "css-loader": "0.26.0",
     "detect-port": "1.0.1",
     "dotenv": "^2.0.0",
-    "drizzle-react": "^1.0.1",
-    "drizzle-react-components": "^1.0.1",
+    "drizzle-react": "^1.1.1",
     "eslint": "3.8.1",
     "eslint-config-react-app": "^0.5.0",
     "eslint-loader": "1.6.0",
@@ -43,7 +42,6 @@
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
-    "truffle-contract": "^1.1.8",
     "truffle-hdwallet-provider": "^0.0.5",
     "truffle-hdwallet-provider-privkey": "^0.1.0",
     "url-loader": "0.5.7",
@@ -55,7 +53,8 @@
   },
   "dependencies": {
     "crypto": "^1.0.1",
-    "drizzle": "^1.0.1",
+    "drizzle": "^1.1.5",
+    "eth-block-tracker-es5": "^2.3.2",
     "ethereumjs-util": "^5.2.0",
     "material-ui": "^1.0.0-beta.38",
     "material-ui-icons": "^1.0.0-beta.36",
