--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "drizzle": "^1.1.5",
     "eth-block-tracker-es5": "^2.3.2",
     "ethereumjs-util": "^5.2.0",
+    "fetch": "^1.1.0",
     "material-ui": "^1.0.0-beta.38",
     "material-ui-icons": "^1.0.0-beta.36",
     "mdi-material-ui": "^3.2.0",
@@ -71,7 +72,9 @@
     "redux-thunk": "^2.2.0",
     "scryptsy": "^2.0.0",
     "simple-icons": "^1.3.8",
-    "typeface-roboto": "0.0.54"
+    "truffle-contract": "^3.0.5",
+    "typeface-roboto": "0.0.54",
+    "web3": "^1.0.0-beta.34"
   },
   "scripts": {
     "start": "node scripts/start.js",
